Soft body cache not being cleared when it should be in Blender 2.8 #60451

Closed
opened 2019-01-12 22:34:21 +01:00 by Jordan · 6 comments

Operating system: Windows 10 Home, 64-bit
Graphics card: Nvidia GTX 1070

Broken:
2.80, ce3475f747, blender2.8, 2019-1-11

Worked: Seems to work in 2.79b

Soft body cache not being fully cleared / overwritten when it should be (e.g., when the animation player loops while a soft body object is being manipulated in the viewport, or when adjustments are made to keyframes of objects that influence the soft body simulation). Cache has to be cleared manually by entering & exiting Edit Mode on soft body object.

  1. Create a cube and enable soft body physics on it.

  2. Create an armature with a single bone, and parent the cube from step 1 to the bone.

  3. Enter pose mode, hit play on the timeline, and manipulate the bone. The attached soft body should behave as expected during the first loop through the timeline, but will behave erratically on subsequent loops.

  4. Stop the animation, clear the soft body cache (by entering & exiting Edit Mode with soft body object selected), and set some rotation keyframes on the bone the soft body is parented to. Hit play on the timeline to fill the cache, then stop the animation and change some of the keyframes. When the animation is played again, results will be similar to those from step 3: i.e., erratic behavior of the soft body due to the cache not being cleared.

bug_report.blend

Operating system: Windows 10 Home, 64-bit Graphics card: Nvidia GTX 1070 Broken: 2.80, ce3475f74794, blender2.8, 2019-1-11 Worked: Seems to work in 2.79b Soft body cache not being fully cleared / overwritten when it should be (e.g., when the animation player loops while a soft body object is being manipulated in the viewport, or when adjustments are made to keyframes of objects that influence the soft body simulation). Cache has to be cleared manually by entering & exiting Edit Mode on soft body object. 1. Create a cube and enable soft body physics on it. 2. Create an armature with a single bone, and parent the cube from step 1 to the bone. 3. Enter pose mode, hit play on the timeline, and manipulate the bone. The attached soft body should behave as expected during the first loop through the timeline, but will behave erratically on subsequent loops. 4. Stop the animation, clear the soft body cache (by entering & exiting Edit Mode with soft body object selected), and set some rotation keyframes on the bone the soft body is parented to. Hit play on the timeline to fill the cache, then stop the animation and change some of the keyframes. When the animation is played again, results will be similar to those from step 3: i.e., erratic behavior of the soft body due to the cache not being cleared. [bug_report.blend](https://archive.blender.org/developer/F6269135/bug_report.blend)
Author

Added subscriber: @Hookflash

Added subscriber: @Hookflash
Bastien Montagne was assigned by Sebastian Parborg 2019-01-28 12:19:00 +01:00
Bastien Montagne removed their assignment 2019-01-31 11:19:22 +01:00
Sergey Sharybin was assigned by Bastien Montagne 2019-01-31 11:19:22 +01:00

Added subscribers: @Sergey, @mont29

Added subscribers: @Sergey, @mont29

This is depsgraph building issue I think, we probably need to add calls to something like DEG_add_object_pointcache_relation() for all objects which affect the softbody one (like it is done for forcefields and collision ones already). Will let that to @Sergey though, am not so sure where/how to do that properly.

This is depsgraph building issue I think, we probably need to add calls to something like `DEG_add_object_pointcache_relation()` for all objects which affect the softbody one (like it is done for forcefields and collision ones already). Will let that to @Sergey though, am not so sure where/how to do that properly.

Fwiw, tried to apply same fix as 9d10fc13e7 to softbody, does not fix that issue. Also, files from #61046 exhibit same problem as in this report, so this is something generic to all pointcached simulations.

Fwiw, tried to apply same fix as 9d10fc13e7 to softbody, does not fix that issue. Also, files from #61046 exhibit same problem as in this report, so this is something generic to all pointcached simulations.

This issue was referenced by 227ed1aa35

This issue was referenced by 227ed1aa3516ae1504f49be90085b2fdc703f6a1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60451
No description provided.